# Croon

./: .gitignore  AppAudioPlayer.cpp  AppAudioPlayer.h  AppPaths.cpp  AppPaths.h  AudioPlayer.h  AudioPlayerBase.h  AzLyricsProvider.cpp  AzLyricsProvider.h  CMakeLists.txt  Config.cpp  Config.h  ConfigService.cpp  ConfigService.h  Constants.h  ConvertDlg.cpp  ConvertDlg.h  Croon.cpp  Croon.h  Croon.lay  Croon.upp  CroonTimingDlg.lay  CroonVideoDlg.lay  CroonWizardShell.lay  DownloadDlg.cpp  DownloadDlg.h  ExportDlg.cpp  ExportDlg.h  Ffmpeg.h  FfmpegCommandBuilder.h  FfmpegProgressParser.cpp  FfmpegProjectCommandBuilder.h  FfmpegSubtitleProbeCommandBuilder.cpp  FfmpegSubtitleProbeCommandBuilder.h  GatherDlg.cpp  GatherDlg.h  GenreCatalog.cpp  KarData.cpp  KarData.h  ListCtrl.cpp  (+73 more)
cmake/: sync_upp_package.cmake
tests/: validate_cmake_umk_contract.py  validate_core_contracts.py  validate_editor_layouts.py  validate_export_audit.py  validate_identity.py  validate_process_contracts.py  validate_simple_layouts.py  validate_wizard_layouts.py
tests/upp/CroonCoreTests/: CroonAssTestSupport.cpp  CroonCoreTestSupport.cpp  CroonCoreTests.cpp  CroonCoreTests.upp
tests/upp/CroonCoreTests/fixtures/: current-project-metadata.json  legacy-unversioned-project-metadata.json  unsupported-project-metadata.json
